test/errors/error7.base
Error: /Users/leonardo/Development/vult/vult/test/errors/error7.vult:1:8-8: Expecting a ')' but got '*'
fun foo(*) {
        ^
